argocd/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "argocd.rech.app"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "argocd.rech.app"
    tls:
      mode: SIMPLE
      credentialName: acme-ca-tls
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  hosts:
  - "argocd.rech.app"
  gateways:
  - argocd-gateway
  http:
  - route:
    - destination:
        host: argo-cd-argocd-server.argocd.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-repo-server
  namespace: argocd
spec:
  hosts:
  - argo-cd-argocd-repo-server
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: argo-cd-argocd-repo-server.argocd.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-cd-argocd-redis
  namespace: argocd
spec:
  hosts:
  - argo-cd-argocd-redis
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: argo-cd-argocd-redis.argocd.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-cd-argocd-application-controller
  namespace: argocd
spec:
  hosts:
  - argo-cd-argocd-application-controller
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: argo-cd-argocd-application-controller.argocd.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-cd-argocd-dex-server
  namespace: argocd
spec:
  hosts:
  - argo-cd-argocd-dex-server
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: argo-cd-argocd-dex-server.argocd.svc.cluster.local
